src/test/ui/parser/removed-syntax-field-let.stderr
error: expected identifier, found keyword `let`
  --> $DIR/removed-syntax-field-let.rs:2:5
   |
LL | struct S {
   |        - while parsing this struct
LL |     let foo: (),
   |     ^^^ expected identifier, found keyword

error: aborting due to previous error

